41

* Code cleanup. (simon)

40

* #2304 This adds the sharing facilities to the web-activity. 

You share the currently loaded page by hitting the star button in the browser toolbbar when you are in the shared mode of the activity. The link will come up as a thumbnail in the toolbar at the bottom of the page. The information about the link: url, title, thumbnail, creator gets then transmitted to all the other members. They can then decide whether to show the link in their browser or not. Everyone can add a link but you can only delete a link in your local linkbar which prevents someone from erasing all your links. (erikos)

* #2577: Add german translation. (fab)
* #2596: Add french translation. (Samuel Bizien)

38

* #2763: Save downloads to flash, not to /tmp. (tomeu)

37

* Add greek translation. (simosx)

36

* Increase timeout when copying the file into the datastore to 360s. (tomeu)

35

* #2370 Updated spanish translation. (xavi)

34

* #2364: Fix uploads and clean up correctly the temp files. (tomeu)

33

* #2196: Improve the download of big documents to the clipboard. (tomeu)

32

* #2268 Allow removing downloads from the clipboard while in progress. (tomeu)

31

* Fix stop button icon. (marco)

30

* Add macedonian translation.

29

* #2718: Make the library the browser homepage. (marco)

28

* #1996: Rename to "Browse". (marco)

27

* Make it startup again. (marco)

26

* Add brazilian translation. (DiegoZacarao)

25

* Arabian translation